Fixed flexbox gap issue + changed text and images

--- a/styles/components/About.module.css
+++ b/styles/components/About.module.css
@@ -55,6 +55,7 @@
     -ms-user-select: none;
     user-select: none;
     transition: filter var(--theme-transition) ease-in-out, transform 0.5s ease-in-out;
+    object-position: top right;
 }
 .imageContainer:hover .image {
     filter: grayscale(0);
@@ -157,6 +158,7 @@
     .imageContainer {
         order: 1;
         width: 30%;
+        height: 25rem;
         margin-bottom: 0rem;
     }
     .textContainer {
